# alberta-electoral-boundaries-audit

./: .gitattributes  .gitignore  ADVERSARIAL_AUDIT.md  AI_ONBOARDING.md  CLAUDE.md  COMPLETED_LOG.md  CONTRIBUTING.md  Dockerfile  FROZEN_MANIFEST.md  PATTERNS_AUDIT.md  PRIVATE_FILES.md  README.md  REMEDIATION_LOG.md  REPRODUCING.md  RESTRUCTURE_PLAN.md  REVIEW_LOG.md  TODO.md  TREE.md  add_images.py  alberta_redistricting_audit_final.md  antigravity_log.md  architecture_proposal.md  build_report.py  config.yaml  do_reorg.py  docker-compose.yml  entities.json  fix_future.py  fix_generator_api.py  fix_nan_logging.py  geminiproposal.md  generate_ppt.py  hash_inputs.py  mempalace.yaml  migration.md  pre_registration_amendment_2026-04-27_final_hardening.md  pre_restructure_hashes.txt  pyproject.toml  refactor_preview.py  refactor_sweep.py  (+21 more)
analysis/: _phase1_output.txt  airdrie_diag_out.txt  appendix_e_recon_log.md  build_academic_html.py  build_cover.py  build_pdf.py  check_voice_and_readability.py  check_wuff_voice.py  data_acquisition_log.md  electoral_forensics_population.py  parse_2015_results.py  phase_4c_2026_synthetic_totals.csv  phase_4c_gerrymander_comparison.md  phase_4c_prep.py  phase_4c_runbook.md  red_team_consolidated.md  sensitivity_report.md  submission_search.py  submission_search_log.md  v0_1_2015_cross_election.py  v0_1_2015_cross_election_analysis.md  v0_1_338canada_historical.md  v0_1_338canada_historical.py  v0_1_338canada_reallocate.py  v0_1_338canada_riding_level.md  v0_1_338canada_scraper.py  v0_1_91_seat_preliminary.md  v0_1_act_amendment_proposal.md  (+132 more)
(+1477 files in other folders)
